--- a/style.css
+++ b/style.css
@@ -1,53 +1,74 @@
 
 /***************************************** NAVBAR ***************************************/
-
+/* .body {
+    position: relative;
+} */
 img {
     width: 6.25rem;
 }
 
-.contenedor {
+.container-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    flex-flow: column wrap;
+    min-height: 100vh;
+    position:relative;
+    
+    
     
 }
 
-.d-flex div {
-    
+.challengers {
+    flex: 1;
+}
+
+#chart-bars {
+    flex: 1;
 }
 
 .solo-clasif-wrapper {
     box-shadow: 1px 1px 3px 4px #ccc;
     border-radius: 1rem;
+    flex: 1;
 }
 
 .solo-clasif {
     text-transform: uppercase;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    margin: 1rem;
+    
 }
 
 .medal-wrapper {
-      display:flex;
-      justify-content: center;
-      align-items: center;
-}
-
-.medal-wrapper {
+    display:flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 50%;
     font-size: 1.2rem;
     width: 2.5rem;
     height: 2.5rem;
     background: #3f7df1;
+    margin-right: 1rem;
+    
 }
 
 .medal-wrapper i {
     color: white;
 }
 
-hr {
-    margin-left: 0;
-    margin-right: 0;
-  }
+.co2 {
+    flex: 1;
+}
+
+ .pop-up {
+    position: absolute;
+    max-width: 800px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    visibility: hidden;
+}
